# vcon-admin

./: .gitignore  Dockerfile  README.md  admin.py  custom_info.md  docker-compose-dev.yml  docker-compose-milvus.yml  docker-compose.yml  example_secrets.toml  pyproject.toml  requirements.txt  traefik.yml  user-credentials.yml
.github/workflows/: build-and-push.yml
dynamic/: auth.yml
lib/: common.py
pages/: chatgpt_files.py  config.py  elastic.py  export.py  import-export.py  import.py  info.py  inspect.py  milvus_files.py  status.py  vcons.py  workbench.py
