[tool.poetry]
name = "vcon-admin"
version = "0.1.0"
description = "Administrative tools for the conserver"
authors = ["Thomas Howe <ghostofbasho@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
altair = "5.3.0"
annotated-types = "0.6.0"
anyio = "4.3.0"
appdirs = "1.4.4"
arrow = "1.3.0"
astor = "0.8.1"
asttokens = "2.4.1"
attrs = "23.2.0"
backoff = "2.2.1"
bcrypt = "4.1.3"
beautifulsoup4 = "4.12.3"
blinker = "1.8.2"
boto3 = "1.34.106"
botocore = "1.34.106"
cachetools = "5.3.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
comm = "0.2.2"
contourpy = "1.2.1"
cycler = "0.12.1"
dateutils = "0.6.12"
decorator = "5.1.1"
distro = "1.9.0"
dnspython = "2.6.1"
docker = "7.1.0"
duckdb = "0.10.1"
elastic-transport = "8.13.0"
elasticsearch = "8.13.1"
entrypoints = "0.4"
executing = "2.0.1"
extra-streamlit-components = "0.1.71"
faker = "25.3.0"
favicon = "0.7.0"
fonttools = "4.52.4"
gitdb = "4.0.11"
gitpython = "3.1.43"
greenlet = "3.0.3"
gw-dsl-parser = "0.1.48a4"
h11 = "0.14.0"
htbuilder = "0.6.2"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
ipython = "8.24.0"
ipywidgets = "8.1.2"
jedi = "0.19.1"
jinja2 = "3.1.4"
jmespath = "1.0.1"
jsonschema = "4.22.0"
jsonschema-specifications = "2023.12.1"
jupyterlab-widgets = "3.0.10"
kanaries-track = "0.0.5"
kiwisolver = "1.4.5"
lxml = "5.2.2"
markdown = "3.6"
markdown-it-py = "3.0.0"
markdownlit = "0.0.7"
markupsafe = "2.1.5"
matplotlib = "3.9.0"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
monotonic = "1.6"
more-itertools = "10.2.0"
numpy = "1.26.4"
openai = "1.30.1"
packaging = "24.0"
pandas = "2.2.2"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.3.0"
pip-review = "1.3.0"
prometheus-client = "0.20.0"
prompt-toolkit = "3.0.43"
protobuf = "4.25.3"
psutil = "5.9.8"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyarrow = "16.1.0"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
pydeck = "0.9.1"
pygments = "2.18.0"
pygwalker = "0.4.8.4"
pyjwt = "2.8.0"
pymdown-extensions = "10.8.1"
pymongo = "4.7.2"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pyyaml = "6.0.1"
redis = "5.0.4"
referencing = "0.35.1"
requests = "2.31.0"
rich = "13.7.1"
rpds-py = "0.18.1"
s3transfer = "0.10.1"
segment-analytics-python = "2.2.3"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.1"
soupsieve = "2.5"
sqlalchemy = "2.0.30"
sqlglot = "23.15.8"
st-annotated-text = "4.0.1"
stack-data = "0.6.3"
streamlit = "1.34.0"
streamlit-authenticator = "0.3.2"
streamlit-camera-input-live = "0.2.0"
streamlit-card = "1.0.2"
streamlit-embedcode = "0.1.2"
streamlit-extras = "0.4.2"
streamlit-faker = "0.0.3"
streamlit-image-coordinates = "0.1.6"
streamlit-keyup = "0.2.4"
streamlit-toggle-switch = "1.0.2"
streamlit-vertical-slider = "2.5.5"
tenacity = "8.3.0"
toml = "0.10.2"
toolz = "0.12.1"
tornado = "6.4"
tqdm = "4.66.4"
traitlets = "5.14.3"
types-python-dateutil = "2.9.0.20240316"
typing-extensions = "4.11.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
validators = "0.28.3"
wasmtime = "12.0.0"
watchdog = "4.0.0"
wcwidth = "0.2.13"
widgetsnbextension = "4.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
